# esp32-clock

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CODE.md  README.md  partitions_custom.csv  platformio.ini  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32
components/TFT_eSPI/: CMakeLists.txt  README.md  User_Setup.h  User_Setup_Select.h
components/WiFiManager/: CMakeLists.txt  README.md  WiFiManager.cpp  WiFiManager.h  wm_strings_pt.h  wm_strings_pt_br.h
components/arduino/: CMakeLists.txt
include/: WifiTimeLib.h
kicad/: esp32-clock.kicad_pcb  esp32-clock.kicad_prl  esp32-clock.kicad_pro  esp32-clock.kicad_sch  esp32-clock.kicad_sym  fp-info-cache  fp-lib-table  freerouting.dsn  mapping.csv  supply.kicad_sch  supply_2.kicad_sch  sym-lib-table  temp-freerouting.dsn
main/: CMakeLists.txt  Kconfig.projbuild  WifiTimeLib.cpp  app_main.c  app_main.cpp  esp32-clock.c  gc9a01.c  gc9a01.h  idf_component.yml  lvgl_ui.c  wifi-manager.c  wifi.cpp
src/: main.cpp
